# QtSharedMemoryExample

./: CMakeLists.txt  README.md  main.cpp
